--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>The Merchant of Venice</title>
@@ -7,10 +8,13 @@
 <body>
 
 <div class="everything">
+  <a href="play.html">
+  <img src="images/cover.jpg" alt= "the merchant of venice" />
+  </a>
+
 <h1>The Merchant of Venice
 </h1>
 
-<img src="images/cover.jpg" alt=the merchant of venice />
 
 <ul>
 <li>First Performed: 1596-97</li>
