--- a/play.html
+++ b/play.html
@@ -6,7 +6,8 @@
 		<link type="text/css" rel="stylesheet" href="css/play.css" />
 	</head>
 	<body id="play_-1-" lang="en-GB">
-		<p class="playtitle">The Merchant of Venice</p>
+
+<p class="playtitle">The Merchant of Venice </p>
 		<a href="#navigation" class="menu">Menu</a>
 		<section id="_idContainer000" class="contents">
 			<ul id="navigation">
@@ -17,7 +18,11 @@
 				<li class="TOC-Heading-1"><a href="play.html#_idTextAnchor021">ACT IV. </a><ul><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor022"><span class="allscenes">SCENE I.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor023"><span class="allscenes">SCENE II.</span></a></li></ul></li>
 				<li class="TOC-Heading-1"><a href="play.html#_idTextAnchor024">ACT V.</a><ul><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor025"><span class="allscenes"> SCENE I. </span></a></li></ul></li>
 			</ul>
+<p> <a href="index.html"> Return to cover page </a></p>
 		</section>
+
+
+
 		<section id="_idContainer001" class="dramatis">
 			<h1 class="dramatishead"><a id="_idTextAnchor000"></a>DRAMATIS PERSONAE</h1>
 			<p class="charactername">THE DUKE OF VENICE</p>
