--- a/play.html
+++ b/play.html
@@ -7,18 +7,20 @@
 	</head>
 	<body id="play_-1-" lang="en-GB">
 
-<p class="playtitle">The Merchant of Venice </p>
-		<a href="#navigation" class="menu">Menu</a>
+
+
 		<section id="_idContainer000" class="contents">
+			<p class="playtitle"><a href="index.html">The Merchant of Venice</a> </p>
+	<a href="#navigation" class="menu">Menu</a>
 			<ul id="navigation">
 				<li class="TOC-Heading-1"><a href="play.html#_idTextAnchor000">DRAMATIS PERSONAE</a></li>
 				<li class="TOC-Heading-1"><a href="play.html#_idTextAnchor001"> ACT I. </a><ul><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor002"><span class="allscenes">SCENE I.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor003"><span class="allscenes">SCENE II.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor004"><span class="allscenes">SCENE III.</span></a></li></ul></li>
 				<li class="TOC-Heading-1"><a href="play.html#_idTextAnchor005">ACT II. </a><ul><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor006"><span class="allscenes">SCENE I.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor007"><span class="allscenes">SCENE II.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor008"><span class="allscenes">SCENE III.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor009"><span class="allscenes">SCENE IV.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor010"><span class="allscenes">SCENE V.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor011"><span class="allscenes">SCENE VI.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor012"><span class="allscenes">SCENE VII.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor013"><span class="allscenes">SCENE VIII.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor014"><span class="allscenes">SCENE IX.</span></a></li></ul></li>
 				<li class="TOC-Heading-1"><a href="play.html#_idTextAnchor015">ACT III.</a><ul><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor016"><span class="allscenes">SCENE I.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor017"><span class="allscenes">SCENE II.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor018"><span class="allscenes">SCENE III.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor019"><span class="allscenes">SCENE IV.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor020"><span class="allscenes">SCENE V.</span></a></li></ul></li>
 				<li class="TOC-Heading-1"><a href="play.html#_idTextAnchor021">ACT IV. </a><ul><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor022"><span class="allscenes">SCENE I.</span></a></li><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor023"><span class="allscenes">SCENE II.</span></a></li></ul></li>
-				<li class="TOC-Heading-1"><a href="play.html#_idTextAnchor024">ACT V.</a><ul><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor025"><span class="allscenes"> SCENE I. </span></a></li></ul></li>
+				<li class="TOC-Heading-1"><a href="play.html#_idTextAnchor024">ACT V.</a><ul><li class="TOC-Heading-2"><a href="play.html#_idTextAnchor025"><span class="allscenes"> SCENE I. </span></a></li></ul>
+			</li>
 			</ul>
-<p> <a href="index.html"> Return to cover page </a></p>
 		</section>
 
 
