Updated website from my pc

--- a/play.html
+++ b/play.html
@@ -8,7 +8,6 @@
 	<body id="play_-1-" lang="en-GB">
 
 
-
 		<section id="_idContainer000" class="contents">
 			<p class="playtitle"><a href="index.html">The Merchant of Venice</a> </p>
 	<a href="#navigation" class="menu">Menu</a>
@@ -55,6 +54,7 @@
 			<h1 class="act"><a id="_idTextAnchor001"></a> ACT I. </h1>
 			<h2 class="firstscene"><span class="allscenes"><a id="_idTextAnchor002"></a>SCENE I.</span></h2>
 			<h2 class="location">Venice. A street</h2>
+			<img src="images/boats.png" alt= "boats in the canal" class="center" class="portrait" />
 			<h2 class="stagedirection balance-text"><span class="italic">Enter</span> ANTONIO, SALERIO, and SOLANIO</h2>
 			<p class="character">ANTONIO</p>
 			<p class="verseline">In sooth, I know not why I am so sad.</p>
@@ -275,7 +275,9 @@
 			<p class="verseline">Where money is; and I no question make</p>
 			<p class="verseline">To have it of my trust or for my sake.</p>
 			<h2 class="stagedirection balance-text">Exeunt</h2>
+
 			<h2 class="scene"><span class="allscenes"><a id="_idTextAnchor003"></a>SCENE II.</span></h2>
+			<img src="images/portia.png" alt="portia of merchant of venice" class="center" class="portrait"/>
 			<h2 class="location">Belmont. PORTIA’S house</h2>
 			<h2 class="stagedirection balance-text"><span class="italic">Enter</span> PORTIA with her waiting-woman, NERISSA</h2>
 			<p class="character">PORTIA</p>
@@ -560,9 +562,11 @@
 			<p class="verseline">My ships come home a month before the day.</p>
 			<h2 class="stagedirection balance-text">Exeunt</h2>
 			<h1 class="act"><a id="_idTextAnchor005"></a>ACT II. </h1>
+
 			<h2 class="firstscene"><span class="allscenes"><a id="_idTextAnchor006"></a>SCENE I.</span></h2>
 			<h2 class="location">Belmont. PORTIA’S house</h2>
 			<h2 class="stagedirection balance-text">Flourish of cornets. Enter the PRINCE of MOROCCO, a tawny Moor all in white, and three or four FOLLOWERS accordingly, with PORTIA, NERISSA, and train</h2>
+      <img src="images/photo1.png" alt="a castle" class="center" class="landscape"/>
 			<p class="character">PRINCE OF MOROCCO</p>
 			<p class="verseline">Mislike me not for my complexion,</p>
 			<p class="verseline">The shadowed livery of the burnish’d sun,</p>
@@ -621,6 +625,7 @@
 			<p class="verseline">To make me blest or cursed’st among men!</p>
 			<h2 class="stagedirection balance-text">[Cornets, and exeunt]</h2>
 			<h2 class="scene"><span class="allscenes"><a id="_idTextAnchor007"></a>SCENE II.</span></h2>
+			<img src="images/photo2.png" alt="boat in venice" class="center" class="portrait" />
 			<h2 class="location">Venice. A street</h2>
 			<h2 class="stagedirection balance-text"><span class="italic">Enter</span> LAUNCELOT GOBBO</h2>
 			<p class="character">LAUNCELOT</p>
@@ -795,6 +800,7 @@
 			<h2 class="scene"><span class="allscenes"><a id="_idTextAnchor008"></a>SCENE III.</span></h2>
 			<h2 class="location">Venice. SHYLOCK’S house</h2>
 			<h2 class="stagedirection balance-text"><span class="italic">Enter</span> JESSICA and LAUNCELOT</h2>
+			<img src="images/photo3.jpg" alt="a castle and birds flying in the sky" class="center" class="landscape"/>
 			<p class="character">JESSICA</p>
 			<p class="verseline">I am sorry thou wilt leave my father so.</p>
 			<p class="verseline">Our house is hell; and thou, a merry devil,</p>
@@ -955,6 +961,7 @@
 			<h2 class="scene"><span class="allscenes"><a id="_idTextAnchor011"></a>SCENE VI.</span></h2>
 			<h2 class="location">Venice. Before SHYLOCK’S house</h2>
 			<h2 class="stagedirection balance-text"><span class="italic">Enter</span> the maskers, GRATIANO and SALERIO</h2>
+			<img src="images/photo4.jpg" alt="mask" class="center" class="landscape"/>
 			<p class="character">GRATIANO</p>
 			<p class="verseline">This is the pent-house under which Lorenzo</p>
 			<p class="verseline">Desired us to make stand.</p>
@@ -1219,6 +1226,7 @@
 			<h2 class="scene"><span class="allscenes"><a id="_idTextAnchor014"></a>SCENE IX.</span></h2>
 			<h2 class="location">Belmont. PORTIA’S house</h2>
 			<h2 class="stagedirection balance-text"><span class="italic">Enter</span> NERISSA, and a SERVITOR</h2>
+			<img src="images/ge.jpg" alt="painting of two women" class="center" class="portrait"/>
 			<p class="character">NERISSA</p>
 			<p class="verseline">Quick, quick, I pray thee, draw the curtain straight;</p>
 			<p class="verseline">The Prince of Arragon hath ta’en his oath,</p>
@@ -1441,6 +1449,7 @@
 			<h2 class="scene"><span class="allscenes"><a id="_idTextAnchor017"></a>SCENE II.</span></h2>
 			<h2 class="location">Belmont. PORTIA’S house</h2>
 			<h2 class="stagedirection balance-text"><span class="italic">Enter</span> BASSANIO, PORTIA, GRATIANO, NERISSA, and all</h2>
+			<img src="images/casket.jpg" alt="bronze casket"class="center" class="landscape"/>
 			<p class="verseline">their trains</p>
 			<p class="character">PORTIA</p>
 			<p class="verseline">I pray you tarry; pause a day or two</p>
@@ -1824,6 +1833,7 @@
 			<h2 class="scene"><span class="allscenes"><a id="_idTextAnchor018"></a>SCENE III.</span></h2>
 			<h2 class="location">Venice. A street</h2>
 			<h2 class="stagedirection balance-text"><span class="italic">Enter</span> SHYLOCK, SOLANIO, ANTONIO, and GAOLER</h2>
+			<img src="images/photo5.png" alt="shylock and antonio in the merchant of venice" class="center" class="portrait"/>
 			<p class="character">SHYLOCK</p>
 			<p class="verseline">Gaoler, look to him. Tell not me of mercy-</p>
 			<p class="verseline">This is the fool that lent out money gratis.</p>
@@ -2068,8 +2078,10 @@
 			<h2 class="firstscene"><span class="allscenes"><a id="_idTextAnchor022"></a>SCENE I.</span></h2>
 			<h2 class="location">Venice. The court of justice</h2>
 			<h2 class="stagedirection balance-text"><span class="italic">Enter</span> the DUKE, the MAGNIFICOES, ANTONIO, BASSANIO,</h2>
-			<p class="verseline">GRATIANO, SALERIO, and OTHERS</p>
-			<p class="verseline">DUKE OF VENICE. What, is Antonio here?</p>
+			<img src="images/photo6.png" alt="court scene in the merchant of venice" class="center" class="landscape" />
+			<h2 class="stagedirection balance-text">GRATIANO, SALERIO, and OTHERS </h2>
+			<p class="character">DUKE OF VENICE</p>
+			<p class="verseline">What, is Antonio here?</p>
 			<p class="character">ANTONIO</p>
 			<p class="verseline">Ready, so please your Grace.</p>
 			<p class="verseline">DUKE OF VENICE. I am sorry for thee; thou art come to answer</p>
@@ -2345,6 +2357,7 @@
 			<p class="verseline">Nearest the merchant’s heart. Be merciful.</p>
 			<p class="verseline">Take thrice thy money; bid me tear the bond.</p>
 			<p class="character">SHYLOCK</p>
+			<img src="images/photo7.jpg" alt="shylock" class="center" class="portrait"/>
 			<p class="verseline">When it is paid according to the tenour.</p>
 			<p class="verseline">It doth appear you are a worthy judge;</p>
 			<p class="verseline">You know the law; your exposition</p>
@@ -3104,6 +3117,7 @@
 			<p class="verseline">Well, while I live, I’ll fear no other thing</p>
 			<p class="lastlineinverse">So sore as keeping safe Nerissa’s ring.</p>
 			<h2 class="stagedirection balance-text">Exeunt</h2>
+			<img src="images/photo8.jpg" alt="trial scene" class="center" class="landscape" />
 		</section>
 	</body>
 </html>
