--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 Shakespeare Play, The Merchant of Venice is a dramatic comedy that focuses more on the antics of its anti-hero a moneylender called Shylock. The story begins with a young merchant Antonio obtaining a loan from Shylock on behalf of his friend Bassanio. Bassanio requires the money to woo a wealthy heiress Portia. Shylock resenting Antonio agrees to lend the money on condition of extracting a pound of his flesh in case of default of payment. The unthinkable happens with Antonio losing his wealth falling in debt to Shylock. Meanwhile, Bassanio is successful in his attempt to win the affections of Portia.
 </p>
 <p>
-The play climaxes in a court scene where Portia disguised as a lawyer delivers her famous “mercy” speech to win the case against Shylock.
+The play climaxes in a court scene where Portia disguised as a lawyer delivers her famous mercy speech to win the case against Shylock.
 </p>
 
 </div>
