--- a/play.html
+++ b/play.html
@@ -2662,6 +2662,11 @@
 			<p class="verseline">And in the morning early will we both</p>
 			<p class="verseline">Fly toward Belmont. Come, Antonio.</p>
 			<h2 class="stagedirection balance-text">Exeunt</h2>
+
+			<div class= "video-box">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/gDoOdaKRUaE?start=3" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
+		  </div>
+
 			<h2 class="scene"><span class="allscenes"><a id="_idTextAnchor023"></a>SCENE II.</span></h2>
 			<h2 class="location">Venice. A street</h2>
 			<h2 class="stagedirection balance-text"><span class="italic">Enter</span> PORTIA and NERISSA</h2>
@@ -2695,6 +2700,11 @@
 			<p class="character">NERISSA</p>
 			<p class="verseline">Come, good sir, will you show me to this house?</p>
 			<h2 class="stagedirection balance-text">Exeunt</h2>
+
+			<div class="video-box">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/ielSFrktsi4?start=3" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	   	</div>
+
 			<h1 class="act"><a id="_idTextAnchor024"></a>ACT V.</h1>
 			<h2 class="firstscene"><span class="allscenes"><a id="_idTextAnchor025"></a> SCENE I. </span></h2>
 			<h2 class="location">Belmont. The garden before PORTIA’S house</h2>
