--- a/play.html
+++ b/play.html
@@ -2666,7 +2666,7 @@
 			<h2 class="stagedirection balance-text">Exeunt</h2>
 
 			<div class= "video-box">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/gDoOdaKRUaE?start=3?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/gDoOdaKRUaE?start=3?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
 		  </div>
 
 			<h2 class="scene"><span class="allscenes"><a id="_idTextAnchor023"></a>SCENE II.</span></h2>
@@ -2704,7 +2704,7 @@
 			<h2 class="stagedirection balance-text">Exeunt</h2>
 
 			<div class="video-box">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/ielSFrktsi4?start=3?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/ielSFrktsi4?start=3?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	   	</div>
 
 			<h1 class="act"><a id="_idTextAnchor024"></a>ACT V.</h1>
